myteo/test/analyze/name_resolution/methods/unresolved_type_error.myte
module test

type Foo (Int)

// Successfully resolved
methods Foo {}

// Does not exist
methods Bar {}

fun main() {}